REFACTOR:  ADD ALL --REV7